Fix overflow scrolling in file view mode with multiple messages Change label `My Data Sources` -> `My Data` Do not display list of known profiles in alert modal when there's none

--- a/app/styles/_data-connect.scss
+++ b/app/styles/_data-connect.scss
@@ -144,16 +144,16 @@
 	overflow-y: hidden;
 }
 #message-view-modal .modal-dialog {
-	max-height: 98%;
+	height: 98%;
 	margin-top: 10px;
+	padding: 5px 15px;
 }
 #message-view-modal .modal-content {
 	max-height: 98%;
+	overflow-y: auto;
 }
 #message-view-modal .modal-body {
 	max-height: calc(100% - 73px);
-	overflow-y: auto;
-	padding: 5px 15px;
 }
 #message-view-modal .single-tweet {
 	position: relative;
